--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
-canvas {
-  margin-left: 300px;
+/*canvas {
+  margin-left: 2%;
+  margin-top: 2%;
+}*/
+
+body {
+  margin: 0;
+  padding: 20px 0 0 0 ;
+  text-align: center;
 }
