--- a/css/styles.css
+++ b/css/styles.css
@@ -43,14 +43,19 @@ canvas {
   height: 100%;
 }
 
-.new-game {
+.alert-screen {
   position: absolute;
   top: 0;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-left: 150px;
   width: 500px;
   height: 300px;
 
+}
+
+.game-over {
+  background-color: black;
+  height: 300px;
 }
 
 .btn {
