--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,35 @@
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strong, sub, sup, var,
+b, u, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+  font-family: 'Audiowide', cursive, sans-serif;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+
+
 /*canvas {
   margin-left: 2%;
   margin-top: 2%;
@@ -53,6 +85,11 @@ canvas {
 
 }
 
+.new-game > * {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .game-over {
   background-color: black;
   height: 300px;
@@ -63,6 +100,7 @@ canvas {
   border-radius: 6px;
   padding: 8px 6px;
   transition: 0.4s;
+  min-width: 130px;
 }
 
 .btn:hover {
