--- a/css/styles.css
+++ b/css/styles.css
@@ -90,32 +90,32 @@ canvas {
 .alert-screen {
   position: absolute;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 101%;
+  height: 101%;
 }
 
-.high-score {
-	font-size: 20px;
-	height: 30px;
+.score {
+	font-size: 26px;
+	height: 26px;
 	width: 40px;
 	margin: 10px auto 0;
 }
 
+
 .alert-screen h2 {
 	font-size: 36px;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 .alert-screen ul {
-	text-align: left;
-	/*max-width: 500px;*/
 	margin: 10px auto;
 	text-align: center;
 }
 
 .alert-screen ul li {
+	/*text-align: left;*/
 	font-size: 18px;
-	margin: 10px 0;
+	margin: 14px 0;
 }
 
 .alert-screen ul img {
@@ -123,14 +123,18 @@ canvas {
 	height: 16px;
 }
 
+.alert-screen span {
+	margin: 0 5px;
+	color: #52C3FB;
+}
+
+.arrow {
+	font-size: 0.75em;
+}
+
 .new-game > * {
   margin-top: 20px;
   margin-bottom: 20px;
-}
-
-.game-over {
-  background-color: black;
-  height: 300px;
 }
 
 .game-over > * {
@@ -141,7 +145,7 @@ canvas {
 	margin-top: 20px;
   color: white;
   border-radius: 6px;
-  padding: 8px 6px;
+  padding: 10px 8px;
   transition: 0.4s;
   min-width: 130px;
 }
@@ -154,8 +158,8 @@ canvas {
 .btn-play {
   background: white;
   color: black;
-  width: 80px;
-  margin: 0 auto;
+  max-width: 160px;
+  margin: 20px auto 0;
 
 }
 
