--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ body {
   width: 900px;
   height: 550px;
   margin: 0 auto;
-	border: 1px solid #52C3FB;
+	border: 1px solid white;;
 }
 
 canvas {
@@ -116,23 +116,40 @@ canvas {
 
 .alert-screen ul {
 	margin: 10px auto;
-	text-align: center;
+	/*margin-left: 20px;*/
 }
 
 .alert-screen ul li {
-	/*text-align: left;*/
+	text-align: left;
 	font-size: 18px;
-	margin: 14px 0;
+	margin: 14px auto;
+	display: flex;
 }
 
 .alert-screen ul img {
 	width: 16px;
 	height: 16px;
+	margin-right: 6px;
 }
 
 .alert-screen span {
 	margin: 0 5px;
 	color: #52C3FB;
+	text-align: left;
+}
+
+.flex-center ul li p {
+	text-align: right;
+	width: 80%;
+}
+
+.power-ups ul {
+	margin-left: 32px;
+}
+
+.controls {
+	width: 50%;
+	margin-left: 6px;
 }
 
 .arrow {
